--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-15  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/loop-6.c: New test.
+
 2000-06-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20000614-1.c: New test.
