--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2000-06-16  Tom Tromey  <tromey@cygnus.com>
+
+	Fix for PR libgcj/261:
+	* include/win32-signal.h (MAKE_THROW_FRAME): Added `_exception'
+	argument.
+	* include/sparc-signal.h (MAKE_THROW_FRAME): Added `_exception'
+	argument.  (This is a patch from long ago that somehow went
+	missing.)
+
 2000-06-15  Tom Tromey  <tromey@cygnus.com>
 
 	* gnu/gcj/convert/natIconv.cc (iconv_adapter): New function.
