--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* fixinc/inclhack.def (ctrl_quotes_def, io_quotes_def): Modify
+	select pattern to also match macro defs with only one argument.
+
 Thu Jun 15 18:56:12 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* i386.md: Create new [right,left] rotate and right shift
