--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,14 @@
+2000-06-16  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* cp-tree.h (enum cplus_tree_code): Changed __DUMMY to
+	CP_DUMMY_TREE_CODE. Remove #include "c-common.def".
+
+	* lex.c (cplus_tree_code_type[]): Removed #include "c-common.def".
+	(cplus_tree_code_length[]): Likewise.
+	(cplus_tree_code_name[]): Likewise.
+	(init_parse): Added call to add_c_tree_codes. Changed 
+	LAST_AND_UNUSED_TREE_CODE to LAST_C_TREE_CODE.
+	
 2000-06-16  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (finish_mem_initializers): Declare.
@@ -69,7 +80,7 @@
 	
 	* cp-tree.h (DECL_PENDING_INLINE_P): Relax checking.
 
-2000-06-14  Benjamin Chelf  <chelf@cabriolet.stanford.edu>
+2000-06-14  Benjamin Chelf  <chelf@codesourcery.com>
 
 	* cp-tree.h (IF_COND): Move to c-common.h.
 	(THEN_CLAUSE): Likewise.
