2000-05-17  H.J. Lu  (hjl@gnu.org)
	* Make-lang.in: Use a unique stamp for each target to support
	parallel make.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34579 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-17  H.J. Lu  (hjl@gnu.org)
+
+	* Make-lang.in: Use a unique stamp for each target to support
+	parallel make.
+
 Thu Jun 15 14:03:14 2000  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* ste.c (gbe_block): Constify.
