--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-06-17  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/check.tpl:  finish the implementation of multiple tests
+	for a single fix
+	* fixinc/inclhack.def(ctrl_quotes_def): add a second test
+	(io_quotes_def): add a second test
+	* fixinc/tests/base/*: update the testing output
+
 Sat Jun 17 10:33:59 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* gcc.texi: Remove reference to stupid.c.
