--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -80,6 +80,7 @@
 ;;	4	pfs_restore
 ;;	5	set_bsp
 ;;	6	pr_restore
+;;	7	pred.rel.mutex
 
 ;; ::::::::::::::::::::
 ;; ::
@@ -288,8 +289,8 @@
 }")
 
 (define_insn "*movdi_internal"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r, m, r,*f,*f,*f, m, r,*b")
-	(match_operand:DI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f, m,*f,*b,rO"))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r, m,r,*f,*f,*f,Q, r,*b")
+	(match_operand:DI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f,Q,*f,*b,rO"))]
   "! memory_operand (operands[0], DImode)
    || ! memory_operand (operands[1], DImode)"
   "@
@@ -301,8 +302,8 @@
   getf.sig %0 = %1
   setf.sig %0 = %r1
   mov %0 = %1
-  ldf8%O1 %0 = %1%P1
-  stf8%Q0 %0 = %1%P0
+  ldf8 %0 = %1%P1
+  stf8 %0 = %1%P0
   mov %0 = %1
   mov %0 = %r1"
   [(set_attr "type" "A,A,L,M,M,M,M,F,M,M,I,I")])
@@ -392,8 +393,8 @@
 }")
 
 (define_insn "*movsf_internal"
-  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f, m,*r, f,*r,*r, m")
-	(match_operand:SF 1 "general_operand"      "fG,m,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:SF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
   "! memory_operand (operands[0], SFmode)
    || ! memory_operand (operands[1], SFmode)"
   "@
@@ -420,8 +421,8 @@
 }")
 
 (define_insn "*movdf_internal"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f, m,*r, f,*r,*r, m")
-	(match_operand:DF 1 "general_operand"      "fG,m,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:DF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
   "! memory_operand (operands[0], DFmode)
    || ! memory_operand (operands[1], DFmode)"
   "@
@@ -447,6 +448,7 @@
     operands[1] = copy_to_mode_reg (XFmode, operands[1]);
 }")
 
+;; ??? There's no easy way to mind volatile acquire/release semantics.
 (define_insn "*movxf_internal"
   [(set (match_operand:XF 0 "nonimmediate_operand" "=f,f, m")
 	(match_operand:XF 1 "general_operand"      "fG,m,fG"))]
@@ -2383,71 +2385,47 @@
 
 ;; ??? Add movXXcc patterns?
 
-;; ??? The predicates don't match the constraints.
-
-;; ??? r/c/m/m and m/c/r/r alternatives make sense, but won't work until the
-;; predicates are fixed, because the define_splits won't recognize them.
-
 ;;
 ;; DImode if_then_else patterns.
 ;;
 
-(define_insn "*cmovdi_internal"
-  [(set (match_operand:DI 0 "register_operand" "=r,r,m,r,r,m,r")
+(define_insn_and_split "*cmovdi_internal"
+  [(set (match_operand:DI 0 "nonimmediate_operand"
+			  "=r,m,*f,Q,*b,r,m,*f,Q,*b,r,m,*f,Q,*b")
 	(if_then_else:DI
 	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "c,c,c,c,c,c,c")
+	    [(match_operand:CC 1 "register_operand"
+			       "c,c,c,c,c,c,c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
-	  (match_operand:DI 2 "reg_or_22bit_operand" "0,0,0,rI,m,r,rI")
-	  (match_operand:DI 3 "reg_or_22bit_operand" "rI,m,r,0,0,0,rI")))]
+	  (match_operand:DI 2 "general_operand"
+		    "0,0,0,0,0,rim*f*b,rO,rOQ,*f,r,rim*f*b,rO,rOQ,*f,r")
+	  (match_operand:DI 3 "general_operand"
+		    "rim*f*b,rO,rOQ,*f,r,0,0,0,0,0,rim*f*b,rO,rOQ,*f,r")))]
   ""
   "#"
-  [(set_attr "type" "A,M,M,A,M,M,unknown")])
-
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-	(if_then_else:DI
-	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "")
-	     (const_int 0)])
-	  (match_operand:DI 2 "reg_or_22bit_operand" "")
-	  (match_operand:DI 3 "reg_or_22bit_operand" "")))]
-  "(reload_completed
-    && (rtx_equal_p (operands[0], operands[2])
-        || rtx_equal_p (operands[0], operands[3])))"
-  [(cond_exec
-     (match_dup 4)
-     (set (match_dup 0) (match_dup 2)))]
-  "
-{
-  if (rtx_equal_p (operands[0], operands[2]))
-    {
-      operands[2] = operands[3];
-      operands[4] = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
-				    CCmode, operands[1], const0_rtx);
-    }
-}")
-
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-	(if_then_else:DI
-	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "")
-	     (const_int 0)])
-	  (match_operand:DI 2 "reg_or_22bit_operand" "")
-	  (match_operand:DI 3 "reg_or_22bit_operand" "")))]
   "reload_completed"
-  [(cond_exec
-     (match_dup 4)
-     (set (match_dup 0) (match_dup 2)))
-   (cond_exec
-     (match_dup 5)
-     (set (match_dup 0) (match_dup 3)))]
+  [(const_int 0)]
   "
 {
-  operands[5] = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
-				CCmode, operands[1], const0_rtx);
-}")
+  rtx tmp;
+  if (! rtx_equal_p (operands[0], operands[2]))
+    {
+      tmp = gen_rtx_SET (VOIDmode, operands[0], operands[2]);
+      tmp = gen_rtx_COND_EXEC (VOIDmode, operands[4], tmp);
+      emit_insn (tmp);
+    }
+  if (! rtx_equal_p (operands[0], operands[3]))
+    {
+      tmp = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
+			    CCmode, operands[1], const0_rtx);
+      tmp = gen_rtx_COND_EXEC (VOIDmode, tmp,
+			       gen_rtx_SET (VOIDmode, operands[0],
+					    operands[3]));
+      emit_insn (tmp);
+    }
+  DONE;
+}"
+  [(set_attr "predicable" "no")])
 
 ;; Absolute value pattern.
 
@@ -2461,7 +2439,8 @@
 	  (match_operand:DI 3 "reg_or_22bit_operand" "0,rI")))]
   ""
   "#"
-  [(set_attr "type" "A,unknown")])
+  [(set_attr "type" "A,unknown")
+   (set_attr "predicable" "no")])
 
 (define_split
   [(set (match_operand:DI 0 "register_operand" "")
@@ -2503,62 +2482,41 @@
 ;; SImode if_then_else patterns.
 ;;
 
-(define_insn "*cmovsi_internal"
-  [(set (match_operand:SI 0 "register_operand" "=r,r,m,r,r,m,r")
+(define_insn_and_split "*cmovsi_internal"
+  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,m,*f,r,m,*f,r,m,*f")
 	(if_then_else:SI
 	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "c,c,c,c,c,c,c")
+	    [(match_operand:CC 1 "register_operand" "c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
-	  (match_operand:SI 2 "reg_or_22bit_operand" "0,0,0,rI,m,r,rI")
-	  (match_operand:SI 3 "reg_or_22bit_operand" "rI,m,r,0,0,0,rI")))]
+	  (match_operand:SI 2 "general_operand"
+		    "0,0,0,rim*f,rO,rO,rim*f,rO,rO")
+	  (match_operand:SI 3 "general_operand"
+		    "rim*f,rO,rO,0,0,0,rim*f,rO,rO")))]
   ""
   "#"
-  [(set_attr "type" "A,M,M,A,M,M,unknown")])
-
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-	(if_then_else:SI
-	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "")
-	     (const_int 0)])
-	  (match_operand:SI 2 "reg_or_22bit_operand" "")
-	  (match_operand:SI 3 "reg_or_22bit_operand" "")))]
-  "(reload_completed
-    && (rtx_equal_p (operands[0], operands[2])
-        || rtx_equal_p (operands[0], operands[3])))"
-  [(cond_exec
-     (match_dup 4)
-     (set (match_dup 0) (match_dup 2)))]
-  "
-{
-  if (rtx_equal_p (operands[0], operands[2]))
-    {
-      operands[2] = operands[3];
-      operands[4] = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
-				    CCmode, operands[1], const0_rtx);
-    }
-}")
-
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-	(if_then_else:SI
-	  (match_operator:CC 4 "predicate_operator"
-	    [(match_operand:CC 1 "register_operand" "")
-	     (const_int 0)])
-	  (match_operand:SI 2 "reg_or_22bit_operand" "")
-	  (match_operand:SI 3 "reg_or_22bit_operand" "")))]
   "reload_completed"
-  [(cond_exec
-     (match_dup 4)
-     (set (match_dup 0) (match_dup 2)))
-   (cond_exec
-     (match_dup 5)
-     (set (match_dup 0) (match_dup 3)))]
+  [(const_int 0)]
   "
 {
-  operands[5] = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
-				CCmode, operands[1], const0_rtx);
-}")
+  rtx tmp;
+  if (! rtx_equal_p (operands[0], operands[2]))
+    {
+      tmp = gen_rtx_SET (VOIDmode, operands[0], operands[2]);
+      tmp = gen_rtx_COND_EXEC (VOIDmode, operands[4], tmp);
+      emit_insn (tmp);
+    }
+  if (! rtx_equal_p (operands[0], operands[3]))
+    {
+      tmp = gen_rtx_fmt_ee (GET_CODE (operands[4]) == NE ? EQ : NE,
+			    CCmode, operands[1], const0_rtx);
+      tmp = gen_rtx_COND_EXEC (VOIDmode, tmp,
+			       gen_rtx_SET (VOIDmode, operands[0],
+					    operands[3]));
+      emit_insn (tmp);
+    }
+  DONE;
+}"
+  [(set_attr "predicable" "no")])
 
 (define_insn "*abssi2_internal"
   [(set (match_operand:SI 0 "register_operand" "=r,r")
@@ -2570,7 +2528,8 @@
 	  (match_operand:SI 2 "reg_or_22bit_operand" "0,rI")))]
   ""
   "#"
-  [(set_attr "type" "A,unknown")])
+  [(set_attr "type" "A,unknown")
+   (set_attr "predicable" "no")])
 
 (define_split
   [(set (match_operand:SI 0 "register_operand" "")
@@ -3769,3 +3728,11 @@
       (const_int 0)])]
   ""
   "(%J0)")
+
+(define_insn "pred_rel_mutex"
+  [(unspec_volatile [(match_operand:CC 0 "register_operand" "c")
+		     (match_operand:CC 1 "register_operand" "c")] 7)]
+  ""
+  ".pred.rel.mutex %0,%1"
+  [(set_attr "type" "unknown")
+   (set_attr "predicable" "no")])
