--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-19  Philipp Thomas  <pthomas@suse.de>
+
+	* POTFILES.in: change entries for dyn-string.[ch]
+
 2000-06-13  Philipp Thomas  <pthomas@suse.de>
 
 	* en_UK.po: Renamed to en_GB.po.
